--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-grid-layout": "^0.18.1",
+    "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
+    "redux": "^4.0.5",
     "styled-components": "^5.0.1"
   },
   "scripts": {
