--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "markdown-to-jsx": "^6.11.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-firebase-hooks": "^2.1.1",
     "react-grid-layout": "^0.18.1",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
