--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-firebase-hooks": "^2.1.1",
     "react-grid-layout": "^0.18.1",
     "react-redux": "^7.2.0",
+    "react-router": "^5.1.2",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
     "styled-components": "^5.0.1"
