--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "firebase": "^7.11.0",
     "markdown-to-jsx": "^6.11.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -14,6 +15,7 @@
     "react-grid-layout": "^0.18.1",
     "react-redux": "^7.2.0",
     "react-router": "^5.1.2",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5",
     "styled-components": "^5.0.1"
