--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "firebase": "^7.11.0",
+    "highlight.js": "^10.0.2",
+    "markdown-it": "^10.0.0",
+    "markdown-it-katex": "^2.0.3",
     "markdown-to-jsx": "^6.11.0",
+    "material-icons-react": "1.0.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-firebase-hooks": "^2.1.1",
