--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "client-side-python-runner": "^1.0.1",
     "firebase": "^7.11.0",
     "highlight.js": "^10.0.2",
     "markdown-it": "^10.0.0",
